hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__ieq@llvm14.snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i1 @_hl.main.1(i8 %0, i8 %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = icmp eq i8 %0, %1
  %3 = select i1 %2, i1 true, i1 false
  ret i1 %3
}
